@@ -1,6 +1,11 @@
 Release history for bevelbar
 
 next
+  [Fixed]
+  - When reading input from STDIN, we now limit the buffer to about 64k.
+    Previously, it was unlimited, meaning faulty scripts could make
+    bevelbar eat all your memory.
+
   [Added]
   - Validate magic number of farbfeld images as a quick sanity check.
 
